# Ghost-Protocol

./: .gitignore  Cargo.toml  README.md  SECURITY.md
crates/ghost-common/: Cargo.toml
crates/ghost-common/src/: config.rs  error.rs  lib.rs  protocol.rs
crates/ghost-ebpf/: Cargo.toml
crates/ghost-ebpf/src/: checksum.rs  main.rs  maps.rs  tc.rs  types.rs  xdp.rs
crates/ghost-knock/: Cargo.toml
crates/ghost-knock/src/: lib.rs  main.rs
crates/ghost-knock/tests/: knock_test.rs
crates/ghost-proxy/: Cargo.toml
crates/ghost-proxy/src/: lib.rs  main.rs
crates/ghost-proxy/tests/: proxy_test.rs
crates/ghost-ui/: Cargo.toml
crates/ghost-ui/src/: lib.rs  main.rs
crates/ghost-ui/tests/: ui_test.rs
crates/ghostd/: Cargo.toml
crates/ghostd/src/: broadcaster.rs  ebpf_loader.rs  firewall.rs  lib.rs  main.rs  persona.rs  session.rs  tarpit.rs
crates/ghostd/tests/: ebpf_test.rs  integration.rs  persona_test.rs  session_test.rs  tarpit_test.rs
docs/adr/: 0001-ebpf-framework-aya-vs-libbpf-rs.md  0002-ebpf-hook-architecture.md  README.md
personas/: README.md  generic.toml  http.toml  mysql.toml  smb.toml  ssh.toml
scripts/: setup.sh
