[workspace]
resolver = "2"
members = [
    "crates/ghostd",
    "crates/ghost-knock",
    "crates/ghost-proxy",
    "crates/ghost-ui",
    "crates/ghost-common",
]
# ghost-ebpf is excluded — requires bpfel-unknown-none target (Linux nightly only).
# Linux CI compiles it separately with:
#   cargo +nightly build -p ghost-ebpf --target bpfel-unknown-none -Z build-std=core
exclude = ["crates/ghost-ebpf"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80.0"
repository = "https://github.com/0x7d4/Ghost-Protocol"
description = "Moving Target Defense daemon for Linux"

[workspace.dependencies]
# --- Aya userspace (eBPF loader) ---
aya = { version = "0.13.1", features = ["async_tokio"] }
aya-log = "0.2.1"

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- CLI / Config ---
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# --- Logging / Tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# --- Error handling ---
anyhow = "1"
thiserror = "2"

# --- TOTP ---
totp-rs = { version = "5", features = ["gen_secret"] }

# --- LLM / Ollama ---
ollama-rs = "0.3"

# --- TUI ---
ratatui = "0.30"
crossterm = "0.28"

# --- Networking ---
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }

ghost-common = { path = "crates/ghost-common" }
futures-util = "0.3"
regex = "1.10"
once_cell = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
