[package]
name = "ghost-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Ratatui TUI dashboard for Ghost-Protocol"

[[bin]]
name = "ghost-ui"
path = "src/main.rs"

[lib]
name = "ghost_ui"
path = "src/lib.rs"

[dependencies]
ghost-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures-util = "0.3"
clap = { workspace = true }
