[package]
name = "ghostd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Ghost-Protocol main daemon: tarpit engine, LLM persona, eBPF loader"

[[bin]]
name = "ghostd"
path = "src/main.rs"

[lib]
name = "ghostd"
path = "src/lib.rs"

[dependencies]
ghost-common = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ollama-rs = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }

# aya is Linux-only (uses std::os::fd, libc Linux syscalls)
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
aya-log = { workspace = true }

[dev-dependencies]
pnet = "0.35.0"
ghost-ui = { path = "../ghost-ui" }
ghost-knock = { path = "../ghost-knock" }
